--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 flask>=2.3.0
 flask-cors>=4.0.0
 tensorflow>=2.13.0
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 scikit-learn>=1.3.0
 joblib>=1.3.0
 pandas>=2.0.0
 pillow>=10.0.0
 numpy>=1.24.0
 gdown>=4.7.0
+gunicorn>=21.2.0
