--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-flask>=2.3.0
-flask-cors>=4.0.0
-tensorflow>=2.13.0
-opencv-python-headless>=4.8.0
-scikit-learn>=1.3.0
-joblib>=1.3.0
-pandas>=2.0.0
-pillow>=10.0.0
-numpy>=1.24.0
-huggingface_hub>=0.19.0
-gunicorn>=21.2.0
+flask==3.0.0
+flask-cors==4.0.0
+tensorflow==2.15.0
+opencv-python-headless==4.8.1.78
+joblib==1.3.2
+pandas==2.1.3
+numpy==1.26.2
+huggingface_hub==0.19.4
+gunicorn==21.2.0
+scikit-learn==1.3.2
